src/objects/VartopiaDRS__Registration_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>VartopiaDRS__Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Is_New_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Overwrite_Opportunity_in_Registrations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Opportunity in Registrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Registration Mapping</label>
</CustomObject>